@@ -50,9 +50,11 @@ description = """PCGen"""
 
 defaultTasks 'build'
 
-// Java 14 would be 1.14, Java 16 would be 1.16 and so forth
-sourceCompatibility = "1.16"
-targetCompatibility = "1.16"
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(16)
+    }
+}
 
 ext {
     binDir = "code/bin"
@@ -169,7 +171,7 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-beans', version:'5.3.7'
     implementation group: 'org.springframework', name: 'spring-core', version:'5.3.7'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version:'3.12.0'
-    compile('org.apache.xmlgraphics:fop:2.6')
+    compileOnly('org.apache.xmlgraphics:fop:2.6')
     {
         exclude group: 'xml-apis', module: 'xml-apis'
     }
@@ -221,6 +223,7 @@ ext {
 
 jar {
     it.dependsOn 'jar-all-plugins'
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     manifest {
         attributes 'Implementation-Title': 'PCGen', 'Implementation-Version': archiveVersion,
                 'Main-Class': 'pcgen.system.Main', 'Class-Path': classpath
@@ -327,7 +330,7 @@ artifacts {
 
 task copyToLibs(type: Copy) {
     into "$buildDir/libs"
-    from configurations.runtime
+    from configurations.runtimeOnly
 }
 
 task copyToOutput(type: Copy, dependsOn: [createExe, copyToLibs, jar,
@@ -385,7 +388,7 @@ build.mustRunAfter clean
 task downloadJRE {
     def major = 16
     def archs = ['x64','x32']
-    def osList = ['windows', 'mac','linux']
+    def osList = ['windows', 'mac', 'linux']
     def extension = 'zip'
     osList.each{
         def os = "${it}"
@@ -570,9 +573,7 @@ tasks.runtime.dependsOn(downloadJavaFXModules)
 
 test {
     exclude 'pcgen/testsupport/**'
-
     useJUnitPlatform()
-
 }
 
 task itest(type: Test, dependsOn: [jar]) {
@@ -672,11 +673,12 @@ allprojects {
                 //Needed to fix issue with testfx test crashing due to issue with modularity of whole program. Slightly related issue. https://github.com/TestFX/TestFX/issues/638
                 '--add-exports','javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
                 '--add-opens','javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
-
+                '--enable-preview'
         ]
     }
     tasks.withType(JavaCompile) {
         doFirst {
+            it.options.compilerArgs.add('--enable-preview')
 
             if (name.toLowerCase().contains("test")) {
                 options.compilerArgs << "--module-path" << "${projectDir}/mods/lib/"
@@ -691,6 +693,7 @@ allprojects {
 dependencyUpdates {
     revision='release'
 }
+
 dependencyUpdates.resolutionStrategy {
     componentSelection { rules ->
         rules.all { ComponentSelection selection ->
@@ -730,7 +733,6 @@ idea {
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
 }
-
 
 apply from: 'code/gradle/autobuild.gradle'
 apply from: 'code/gradle/distribution.gradle'
